--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!D0CTYRE html>
 <html lang="ru">
-  <head>
+  <title>
     <litle>Привет мир</litle>
   </head>
   <body>
-    <h1>Привет мир</h1>
+    <h1></h1>
   </body>
 </html>
