--- a/Congratulations2026.html
+++ b/Congratulations2026.html
@@ -6,6 +6,21 @@
     <title>Заголовок страницы</title>
 </head>
 <body>
-    <p>Привет, мир!</p>
+    <p>
+Приближается один из любимых праздников в России — Новый год. В этот волшебный период улицы городов украшаются разноцветными гирляндами, а дома наполняются ароматом мандаринов и свежей хвои. 
+    Люди с особым трепетом готовятся к празднику: выбирают подарки, наряжают ёлки и продумывают новогодние образы. Особенно радуются дети, ведь Дед Мороз и Снегурочка обещают исполнить самые заветные желания.
+    </p>
+    <p>
+В преддверии праздника многие семьи проводят вечера за увлекательными занятиями, например, разгадыванием головоломок. 
+    Популярностью пользуется русский кроссворд, в котором нужно вспомнить традиционные новогодние символы, песни и фильмы. Такие задания не только развлекают, но и пробуждают ностальгию по детству, 
+    когда главным событием года была новогодняя ёлка в школе или во дворе.
+    </p>
+<p>
+    Не менее интересен и английский кроссворд, особенно для тех, кто увлекается иностранными языками или готовится к международным праздникам. 
+    В нём могут встречаться слова вроде snowman, fireworks, resolution или midnight — всё это неотъемлемые атрибуты англоязычного празднования Нового года. 
+    Совмещая развлечение и обучение, такие кроссворды делают ожидание праздника ещё более насыщенным и увлекательным.
+</p>
+
+    
 </body>
 </html>
