--- a/index.html
+++ b/index.html
@@ -5,5 +5,12 @@
   </head>
   <body>
     <h1></h1>
+   <p>Иконки 
+    </p>
+    Yusuke Kamiyamane — автор популярного бесплатного набора Fugue Icons.
+Iconfinder, Flaticon, Noun Project — платформы, где тысячи авторов публикуют свои иконки (например, Freepik, Smashicons, Pixel perfect).
+Google — создала Material Icons, открытую библиотеку иконок в стиле Material Design.
+Apple — разрабатывает собственные иконки для экосистемы iOS и macOS.
+Microsoft — автор Fluent UI Icons (ранее — Segoe UI).
   </body>
 </html>
