--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
     <h1></h1>
    <p>Иконки 
     </p>
-    Yusuke Kamiyamane — автор популярного бесплатного набора Fugue Icons.
-Iconfinder, Flaticon, Noun Project — платформы, где тысячи авторов публикуют свои иконки (например, Freepik, Smashicons, Pixel perfect).
-Google — создала Material Icons, открытую библиотеку иконок в стиле Material Design.
-Apple — разрабатывает собственные иконки для экосистемы iOS и macOS.
-Microsoft — автор Fluent UI Icons (ранее — Segoe UI).
+    <a href="https://www.flaticon.com/ru/free-icons/-" title="Рождественский колокол иконки">Рождественский колокол иконки от Pixelmeetup - Flaticon</a>
   </body>
 </html>
