--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <h1></h1>
    <p>Иконки 
     </p>
-    <a href="https://www.flaticon.com/ru/free-icons/-" title="Рождественский колокол иконки">Рождественский колокол иконки от Pixelmeetup - Flaticon</a>
+     href="<https://www.flaticon.com/ru/free-icons/-" title="Рождественский колокол иконки">Рождественский колокол иконки от Pixelmeetup - Flaticon</a>
+    
   </body>
 </html>
