--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@
     <litle>Привет мир</litle>
   </head>
   <body>
+    <h2> 3 декабря 
+  2025</h2>
+    <img src=“Icons/Рождественский колокол иконки от Pixelmeetup - Flaticon” alt=“Новый год”>
+    Поздравление с Наступающим 2026 годом читайте 
+    <a href=“Congratulations2026.html”> 
+    </a>
+    <h2> 15 октября , 2025</h2>
+    <p>
+Я сделала Новогодние кроссворды для сайта <a href=“http://majorka001”  
+    title=“Блог моего друга”Сайт моего друга</a>
+    </p>
+<h2> 1 сентября , 2025</h2>
+<blockquote>Путешествие в тысячу миль начинается с одного шага (Лао Цзы) </blockquote>
+<p>
+Оставляю в прошлом скучную неинтересную локальную файловую систему ради Всемирной паутины.
+</p>
     <h1></h1>
    <p>Иконки 
     </p>
