--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!D0CTYRE html>
 <html lang="ru">
   <title>
+    <link type=“text/css” rel=“stylesheet” href=“style.css” />
     <litle>Привет мир</litle>
   </head>
   <body>
