--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <litle>Привет мир</litle>
   </head>
   <body>
+    <blockquote class=“q”>Путешествие в тысячу миль начинается с одного шага (Лао Цзы) </blockquote>
     <h2> 3 декабря 
   2025</h2>
     <img src=“Icons/Рождественский колокол иконки от Pixelmeetup - Flaticon” alt=“Новый год”>
