--- a/Congratulations2026.html
+++ b/Congratulations2026.html
@@ -16,7 +16,7 @@
     Популярностью пользуется русский кроссворд, в котором нужно вспомнить традиционные новогодние символы, песни и фильмы. Такие задания не только развлекают, но и пробуждают ностальгию по детству, 
     когда главным событием года была новогодняя ёлка в школе или во дворе.
     </p>
-<p>
+<p class=”quote”>…
     Не менее интересен и английский кроссворд, особенно для тех, кто увлекается иностранными языками или готовится к международным праздникам. 
     В нём могут встречаться слова вроде snowman, fireworks, resolution или midnight — всё это неотъемлемые атрибуты англоязычного празднования Нового года. 
     Совмещая развлечение и обучение, такие кроссворды делают ожидание праздника ещё более насыщенным и увлекательным.
