--- a/Congratulations2026.html
+++ b/Congratulations2026.html
@@ -6,6 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Заголовок страницы</title>
 </head>
+    <!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Новогодние кроссворды</title>
+    <!-- Подключение файла стилей -->
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>Новогодние кроссворды</h1>
+
+    <!-- Русский кроссворд -->
+    <section>
+        <h2>Русский кроссворд</h2>
+        <table class="crossword" id="russian-crossword">
+            <tr><td>ё</td><td>л</td><td>к</td><td>а</td></tr>
+            <tr><td></td><td>о</td><td></td><td></td></tr>
+            <tr><td>с</td><td>н</td><td>е</td><td>г</td></tr>
+            <tr><td></td><td>о</td><td></td><td></td></tr>
+        </table>
+        <p><em>По горизонтали: 1. Главное новогоднее дерево. 3. Белое украшение зимы.</em></p>
+    </section>
+
+    <!-- Английский кроссворд -->
+    <section>
+        <h2>English Crossword</h2>
+        <table class="crossword" id="english-crossword">
+            <tr><td>s</td><td>n</td><td>o</td><td>w</td></tr>
+            <tr><td></td><td>a</td><td></td><td></td></tr>
+            <tr><td>b</td><td>e</td><td>l</td><td>l</td></tr>
+            <tr><td></td><td>l</td><td></td><td></td></tr>
+        </table>
+        <p><em>Across: 1. White winter fall. 3. Makes a ringing sound on Christmas.</em></p>
+    </section>
+
+    <!-- Ссылка "Назад" -->
+    <p><a href="index.html">← Назад</a></p>
+</body>
+</html>
 <body>
     <p>
 Приближается один из любимых праздников в России — Новый год. В этот волшебный период улицы городов украшаются разноцветными гирляндами, а дома наполняются ароматом мандаринов и свежей хвои. 
