--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!D0CTYRE html>
 <html lang="ru">
+    <head>
   <title>
     <link type=“text/css” rel=“stylesheet” href=“style.css” />
     <litle>Привет мир</litle>
