--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
    <p>Иконки 
     </p>
      href="<https://www.flaticon.com/ru/free-icons/-" title="Рождественский колокол иконки">Рождественский колокол иконки от Pixelmeetup - Flaticon</a>
-    
+    <a href="Поздравление с рождеством 2026" download>Скачать текстовое поздравление</a>
+         <a href="index.html">Назад</a>
   </body>
 </html>
